# HaloArrays

benchmarks/: CMakeLists.txt  bench.cpp
include/: DArrays.hpp  boundaries.hpp  cartesian.hpp  darray.hpp  darrayspec.hpp  dlayout.hpp  haloregion.hpp  haloregionspec.hpp  indexiterator.hpp  iterators.hpp  memoryorder.hpp  mpisession.hpp  mpiwrapper.hpp  subarray.hpp  topology.hpp
tests/parallel/: CMakeLists.txt
tests/parallel/src/: TODO  _test_memoryorder.cpp  runtests.cpp  test_constructor.cpp  test_darray.cpp  test_dlayout.cpp  test_haloregionspec.cpp  test_mpiwrapper.cpp  test_subarray.cpp  test_topology.cpp
tests/serial/: CMakeLists.txt
tests/serial/src/: test_iterators.cpp
